# SolverSphere

./: CMakeLists.txt  README.md
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/RubiksCube/: ColorDetector.cpp  ColorDetector.h  ColorDetector_opencv.cpp  Cube3DRenderer.cpp  Cube3DRenderer.h  CubeSolver.cpp  CubeSolver.h  CubeState.cpp  CubeState.h  RubiksCubeWidget.cpp  RubiksCubeWidget.h
src/Sudoku/: OCRProcessor.cpp  OCRProcessor.h  OCRProcessor_full.cpp  SudokuGrid.cpp  SudokuGrid.h  SudokuSolver.cpp  SudokuSolver.h  SudokuWidget.cpp  SudokuWidget.h
src/Utils/: FileUtils.cpp  FileUtils.h  ImageUtils.cpp  ImageUtils.h
